# basics

./: .clang-format  .depos.cmake  .gitignore  CMakeLists.txt  LICENSE  README.md  depos.project.cmake  includes.h
base/: bytell_hash_map.hpp  dtoa_milo.h  flat_hash_map.hpp  reflection.h  traits.h
databases/embedded/: tidesdb.h
depofiles/: aegis.DepoFile  basics.DepoFile.in  bitsery.DepoFile  cares.DepoFile  libcurl.DepoFile  libssh2.DepoFile  lz4.DepoFile  mimalloc.DepoFile  nghttp2.DepoFile  openssl.DepoFile  snappy.DepoFile  tidesdb.DepoFile  zlib.DepoFile
ebpf/: program.h
enums/: memory.h
macros/: bytes.h  global.h  time.h
networking/: arp.h  async.dns.cares.h  async.dns.h  coroutinestack.h  curl.multi.ring.h  email.client.h  eth.h  guardian.h  h2b.client.h  h2nb.client.h  happy.eyeballs.h  icmp.h  includes.h  ip.h  message.h  msg.h  multi.curl.client.h  multiplexer.h  netkit.h  netlink.h  pool.h  private4.h  reconnector.h  ring.h  ring.interfaces.h  ringlet.h  socket.bind.pool.h  socket.h  ssh.h  stream.h  subnets.h  time.h  timerwheel.h  tls.h  veth.h
scripts/: clang-format.sh
services/: base62.h  base64.h  bitsery.h  bytes.h  crypto.h  debug.h  enums.h  filesystem.h  hash.h  memfd.h  memory.h  numbers.h  random.h  threads.h  time.h  vault.h
tests/: assert_async_dns_native_types.cmake  assert_curl_multi_ring_native_types.cmake  assert_multi_curl_client_native_types.cmake  assert_tidesdb_package_contract.cmake  async_dns_cares_tests.cpp  async_dns_tests.cpp  benchmarks.cpp  benchmarks.md  bitsery_tests.cpp  codec_fuzz_tests.cpp  codec_tests.cpp  containers_tests.cpp  curl_multi_ring_contract_tests.cpp  curl_multi_ring_tests.cpp  ebpf_program_tests.cpp  expect_compile_failure.cmake  filesystem_tests.cpp  happy_eyeballs_tests.cpp  linux_integration_tests.cpp  memfd_reflection_tests.cpp  multi_curl_client_contract_tests.cpp  multi_curl_client_tests.cpp  netlink_tests.cpp  networking_primitives_tests.cpp  networking_profile.cpp  networking_profile.md  networking_support_structures_tests.cpp  protocol_client_tests.cpp  public_headers_compile_smoke.cpp  public_headers_invalid_use_mimalloc_compile_fail.cpp  public_headers_missing_use_mimalloc_compile_fail.cpp  ring_integration_tests.cpp  run.sh  run_benchmarks.sh  run_compare_container_allocator_modes.sh  run_downstream_consumer.cmake  run_profile_networking.sh  run_profile_tls.sh  services_sanity_tests.cpp  socket_bind_pool_tests.cpp  (+10 more)
tests/corpus/codec/base64/invalid/: bad-char.txt  bad-padding-mid.txt  leading-padding.txt  triple-padding.txt
tests/corpus/raw/: all-bytes-255.hex  ascii-hello.hex  embedded-nuls.hex  repeating-aa55.hex  structured-pattern.hex
tests/downstream_package/: CMakeLists.txt  main.cpp
tests/fixtures/tls/: ca.cert.pem  peer-a.cert.pem  peer-a.key.pem  peer-b.cert.pem  peer-b.key.pem
tools/: codex_slot_abandon.sh  codex_slot_land.sh  codex_slot_start.sh  generate_release_depofile.cmake
types/: types.containers.h  types.string.h
